feat(air-gapped): make air-gapped installer
